--- a/QuizzAPP/style.css
+++ b/QuizzAPP/style.css
@@ -5,8 +5,11 @@
 }
 
 body {
-    background-color: #b8c6db;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 100%);
+    background: hsla(239, 100%, 67%, 1);
+    background: linear-gradient(90deg, hsla(239, 100%, 67%, 1) 0%, hsla(187, 100%, 89%, 1) 100%);
+    background: -moz-linear-gradient(90deg, hsla(239, 100%, 67%, 1) 0%, hsla(187, 100%, 89%, 1) 100%);
+    background: -webkit-linear-gradient(90deg, hsla(239, 100%, 67%, 1) 0%, hsla(187, 100%, 89%, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#595CFF", endColorstr="#C6F8FF", GradientType=1 );
     display: flex;
     align-items: center;
     justify-content: center;
@@ -49,7 +52,7 @@ ul li label {
 }
 
 button {
-    background-color: #8e44ad;
+    background-color: #0fb9b1;
     border: none;
     color: white;
     cursor: pointer;
@@ -61,10 +64,10 @@ button {
 }
 
 button:hover {
-    background-color: #732d91;
+    background-color: #1e9993;
 }
 
 button:focus {
-    background-color: #5e3370;
+    background-color: #0adbd1;
     outline: none;
 }
