--- a/Countdown/style.css
+++ b/Countdown/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-position: center;
-    background-image: url(/projetosJS/imagens/floresta.jpg);
+    background-image: url(/projetosJS/imagens/newYear.jpg);
     background-size: cover;
     min-height: 100vh;
     display: flex;
@@ -26,7 +26,7 @@ h1{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    color: aliceblue;
+    color: #ffffff;
 }
 
 .big-text{
